Added new user email.

--- a/app/views/alert_mailer/system_alert.text.erb
+++ b/app/views/alert_mailer/system_alert.text.erb
@@ -1,4 +1,5 @@
-System Alert.
-User: <%User.first.fullname%> would like you to check this instance.
+Message from Monitoring Operations:
 
-<%= Time.now %>
+Your email has now been added for system alerts.  If this has been added in error, please click the unsubscribe link:
+
+<%%>
