Added default footer.

--- a/app/views/layouts/default_footer.html.erb
+++ b/app/views/layouts/default_footer.html.erb
@@ -1,4 +1,5 @@
 <div id='footer'>
-<%link_to "Alerts", :controller => "alerts", :action => "index"%>
-<%link_to "Alarms", :controller => "alarms", :action => "index"%>
+<p>
+<%= link_to "Alerts", :controller => "alerts", :action => "index"%>
+<%= link_to "Alarms", :controller => "alarms", :action => "index"%>
 </div>
