Added default footer.

--- a/app/views/alert_mailer/system_alert.text.erb
+++ b/app/views/alert_mailer/system_alert.text.erb
@@ -1,5 +1,4 @@
 Message from Monitoring Operations:
 
-Your email has now been added for system alerts.  If this has been added in error, please click the unsubscribe link:
+<%user.fullname%>, your email has now been added for system alerts.  If this has been added in error, please click the unsubscribe link:
 
-<%%>
