Updates to alarm form.

--- a/app/views/alarms/_form.html.erb
+++ b/app/views/alarms/_form.html.erb
@@ -10,7 +10,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -35,7 +34,7 @@
   </div>
   <div class="field">
     <%= label_tag("Host","host")%>
-    <%= select_tag "req[host]", options_from_collection_for_select(Servicestatus.all_hosts, "host_name", "host_name")%>
+    <%= select_tag "req[host]", options_from_collection_for_select(Servicestatus.all_servhosts, "host_name", "host_name")%>
     <%= label_tag("Down longer than:")%>
     <%= select_tag "req[downtime]", options_for_select(1..99)%>
   </div>
