--- a/app/views/dashboard/nagios.html.erb
+++ b/app/views/dashboard/nagios.html.erb
@@ -19,7 +19,7 @@
             class = "passed" 
           <% when 1 %>
             class = "warning"
-          <% when 2 %>
+          <% when 2 %>ZZZ
             class = "failed"
           <% end %>><%= entry['plugin_output']%></td> 
       </tr>  <%}%>
