--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -24,20 +24,14 @@
     <%= f.datetime_select :stopdate %>
   </div>
   <div class="field">
-    <%= f.label :notifiers %><br />
-    <%= f.text_field :notifiers %>
-  </div>
-  <div class="field">
     <%User.all.each do |users|%>
     <%= check_box_tag "notifiers[]", users.id, false %>
     <%= label_tag(users.name, users.fullname) %>
     <%end%>
   </div>
   <div class="field">
-    <%= f.label :host %><br />
-    <%= f.text_field :host %>
     <%= label_tag("Host","host")%>
-    <%= select_tag "req[host]", options_from_collection_for_select(Servicestatus.all_servhosts, "host_name", "host_name")%>
+    <%= select_tag :host, options_from_collection_for_select(Servicestatus.all_hosts, "host_name", "host_name")%>
   </div>
   <div class="field">
     <%= label_tag("Down longer than:")%>
