--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -17,7 +17,10 @@
 
 <p>
   <b>Notifiers:</b>
-  <%= @alert.notifiers %>
+  <% @alert.notifiers.each do |user| %>
+  <%= User.find(user.first).fullname %>,
+  <%end%>
+
 </p>
 
 <p>
