Removed old alerts scaffold

--- a/app/views/alert_mailer/new_alert.html.erb
+++ b/app/views/alert_mailer/new_alert.html.erb
@@ -1,4 +1,4 @@
-You have a new alert created, monitoring <%@alert.host%> until <%@alert.stopdate%>
+You have a new alert created, monitoring <%=@alert.host%> until <%=@alert.stopdate%>
 
 This alert when triggered will notify:
   <% @alert.notifiers.each do |user| %>
