Adding tweaks to the models.

--- a/app/views/alert_mailer/notification.html.erb
+++ b/app/views/alert_mailer/notification.html.erb
@@ -1,6 +1,6 @@
 ALERT:
 
-The host <%= %> has failed the last <%= %> checks.
+The host <%= @alert.host%> has failed the last <%= @alert.trigger%> checks.
 
 You can IGNORE it and remove yourself from further alerts.
 
