--- a/app/views/alert_mailer/notification.html.erb
+++ b/app/views/alert_mailer/notification.html.erb
@@ -1,5 +1,7 @@
 ALERT:
 
+<%= person%>
+
 The host <%= @alert.host%> has failed the last <%= @alert.trigger%> checks.
 
 You can <%= link_to "ACKNOWLEDGE", "http://mcp.hcpprod.com/acknowledge/id=#{id}&second=#{status}"%>  it and notify all other parties that you will be looking into it.
