Removed old alerts scaffold

--- a/app/views/alerts/alert_check.html.erb
+++ b/app/views/alerts/alert_check.html.erb
@@ -1,8 +1,5 @@
 Generating emails for: 
 <%Alert.all.each do |alert|%>
-<% alertcheck = Servicestatus.where(:host_name => alert.host).where(:service_description => 'HTTP').where(:current_state => 1 ... 9).where(:nagiostimeid => (alert.trigger.to_i  * 5).minutes.ago ... Time.now).count%>
-<%= alert.trigger >= alertcheck ? alert.name : nil%>
+<% alertcheck = Servicestatus.where(:host_name => alert.host).where(:service_description => 'HTTP').where(:current_state => 1 ... 9).where(:nagiostimeid => (alert.trigger.to_i  * 5+240).minutes.ago ... Time.now).count%>
+<%= alert.trigger <= alertcheck ? alert.name : nil%>
 <%end%>
-
-
-
