--- a/app/views/alert_mailer/acknowledged.html.erb
+++ b/app/views/alert_mailer/acknowledged.html.erb
@@ -1,1 +1,7 @@
-Thank you <%= User.find()%>
+NOTICE:
+
+The host <%= @alert.host%> has failed the last <%= @alert.trigger%> checks.
+
+<%= User.find(@person.first.to_i).fullname%> has acknowledged this alert.
+
+For further updates, please contact them at <%= User.find(@person.first.to_i).email%>
