--- a/app/views/alert_mailer/acknowledged.html.erb
+++ b/app/views/alert_mailer/acknowledged.html.erb
@@ -1,7 +1,9 @@
 NOTICE:
 
+<%= User.find(@notified.first.to_i).fullname%>,
+
 The host <%= @person.host%> has failed the last <%= @person.trigger%> checks.
 
-<%= User.find(@notified.first.to_i).fullname%> has acknowledged this alert.
+<%= User.find(@acknowledger.first.to_i).fullname%> has acknowledged this alert.
 
-For further updates, please contact them at <%= User.find(@notified.first.to_i).email%>
+For further updates, please contact them at <%= User.find(@acknowledger.first.to_i).email%>
