--- a/app/views/alert_mailer/acknowledged.html.erb
+++ b/app/views/alert_mailer/acknowledged.html.erb
@@ -1,9 +1,9 @@
 NOTICE:
 
-<%= User.find(@notified.first.to_i).fullname%>,
+<%= User.find(@notified.to_i).fullname%>,
 
-The host <%= alert.host%> has failed the last <%= alert.trigger%> checks.
+The host <%= @alert.host%> has failed the last <%= @alert.trigger%> checks.
 
-<%= User.find(@acknowledger.first.to_i).fullname%> has acknowledged this alert.
+<%= User.find(@acknowledger.to_i).fullname%> has acknowledged this alert.
 
-For further updates, please contact them at <%= User.find(@acknowledger.first.to_i).email%>
+For further updates, please contact them at <%= User.find(@acknowledger.to_i).email%>
