--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@alert) do |f| %>
+<%= form_for(@alert, :url => {:action => 'update', :id => @alert.id}) do |f| %>
   <% if @alert.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@alert.errors.count, "error") %> prohibited this alert from being saved:</h2>
@@ -25,17 +25,17 @@
   </div>
   <div class="field">
     <%User.all.each do |users|%>
-    <%= check_box_tag "notifiers[]", users.id, false %>
+    <%= check_box_tag "notifiers[]", users.id, @alert.notifiers.keys.include?(users.id.to_s)%>
     <%= label_tag(users.name, users.fullname) %>
     <%end%>
   </div>
   <div class="field">
     <%= label_tag("Host","host")%>
-    <%= select_tag :host, options_from_collection_for_select(Servicestatus.all_hosts, "host_name", "host_name")%>
+    <%= select_tag :host, options_from_collection_for_select(Servicestatus.all_hosts, "host_name", "host_name", @alert.host)%>
   </div>
   <div class="field">
     <%= label_tag("Down longer than:")%>
-    <%= select_tag :trigger, options_for_select(1..99)%><a>checks</a>
+    <%= select_tag :trigger, options_for_select(1..99, @alert.trigger)%><a>checks</a>
   </div>
   <div class="actions">
     <%= f.submit %>
