Update to form.

--- a/app/views/alerts/acknowledged.html.erb
+++ b/app/views/alerts/acknowledged.html.erb
@@ -2,6 +2,6 @@ NOTICE:
 
 The host <%= @alert.host%> has failed the last <%= @alert.trigger%> checks.
 
-<%= User.find(@person.first.to_i).fullname%> has acknowledged this alert.
+<%= User.find(@acknowledger.to_i).fullname%> has acknowledged this alert.
 
-For further updates, please contact them at <%= User.find(@person.first.to_i).email%>
+For further updates, please contact them at <%= User.find(@acknowledger.to_i).email%>
