--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@alert, :url => {:action => 'update', :id => @alert.id}) do |f| %>
+<%= form_for(@alert) do |f| %>
   <% if @alert.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@alert.errors.count, "error") %> prohibited this alert from being saved:</h2>
